--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ packages = [{include = "hexlet_pytest"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
+pytest-cov = "^4.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
